@@ -140,6 +140,8 @@ UPDATE `jos_content` AS a
  	FROM `jos_content_frontpage` AS f
  );
 
+ ALTER TABLE `jos_content` CHANGE `attribs` `attribs` VARCHAR( 5120 ) NOT NULL;
+
 -- ----------------------------------------------------------------
 -- jos_extensions (new) and migration
 -- ----------------------------------------------------------------
